--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+models/clothes-virtual-try-on/checkpoints/*.pth
+models/HairFastGAN/pretrained_models/
