--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,8 @@ fastapi
 uvicorn[standard]
 python-multipart
 Pillow
-torch==1.13.1
-torchvision==0.14.1
+torch>=2.0.1
+torchvision>=0.15.2
 numpy==1.23.5
 opencv-python
 scikit-image
@@ -11,6 +11,12 @@ dlib
 face_alignment
 scipy
 scikit-learn
-gradio_client
 kornia
 rembg
+
+# IDM-VTON dependencies
+diffusers==0.27.2
+transformers==4.40.2
+accelerate==0.30.0
+einops==0.8.0
+onnxruntime-gpu
